<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>gr.uth</groupId>
  <artifactId>genesis-app</artifactId>
  <version>1.0.0</version>
  <packaging>war</packaging>

  <properties>
      <maven.compiler.source>21</maven.compiler.source>
      <maven.compiler.target>21</maven.compiler.target>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <surefire-plugin.version>3.5.0</surefire-plugin.version>
      <stripe.version>20.87.0</stripe.version>
      <flyway.version>10.8.1</flyway.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>jakarta.platform</groupId>
      <artifactId>jakarta.jakartaee-api</artifactId>
      <version>10.0.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.microprofile</groupId>
      <artifactId>microprofile</artifactId>
      <version>7.0</version>
      <type>pom</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>gr.kgr.microprofile-extensions</groupId>
      <artifactId>openapi-auth</artifactId>
      <version>1.0</version>
    </dependency>
    <dependency>
      <groupId>com.stripe</groupId>
      <artifactId>stripe-java</artifactId>
      <version>${stripe.version}</version>
    </dependency>
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-maven-plugin</artifactId>
      <version>${flyway.version}</version>
    </dependency>
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-mysql</artifactId>
      <version>${flyway.version}</version>
    </dependency>
    <dependency>
      <groupId>org.skyscreamer</groupId>
      <artifactId>jsonassert</artifactId>
      <version>1.5.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.9.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>4.1.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>4.1.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse</groupId>
      <artifactId>yasson</artifactId>
      <version>3.0.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.core</groupId>
      <artifactId>jersey-common</artifactId>
      <version>3.1.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hibernate.validator</groupId>
      <artifactId>hibernate-validator</artifactId>
      <version>8.0.1.Final</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>genesis-app</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.3.2</version>
      </plugin>
      <plugin>
        <groupId>io.openliberty.tools</groupId>
        <artifactId>liberty-maven-plugin</artifactId>
        <version>3.11.1</version>
        <configuration>
          <bootstrapProperties>
            <GENESIS_APP_VERSION>${project.version}</GENESIS_APP_VERSION>
          </bootstrapProperties>
          <copyDependencies>
            <dependencyGroup>
              <location>jdbc</location>
              <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>8.0.30</version>
              </dependency>
            </dependencyGroup>
          </copyDependencies>
        </configuration>
      </plugin>
      <plugin>
        <groupId>io.smallrye</groupId>
        <artifactId>smallrye-open-api-maven-plugin</artifactId>
        <version>2.1.11</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>generate-schema</goal>
            </goals>
            <configuration>
              <operationIdStrategy>METHOD</operationIdStrategy>
              <scanDependenciesDisable>true</scanDependenciesDisable>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>UI</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>io.smallrye</groupId>
            <artifactId>smallrye-open-api-maven-plugin</artifactId>
            <version>2.1.11</version>
            <executions>
              <execution>
                <phase>prepare-package</phase>
                <goals>
                  <goal>generate-schema</goal>
                </goals>
                <configuration>
                  <operationIdStrategy>METHOD</operationIdStrategy>
                  <scanDependenciesDisable>true</scanDependenciesDisable>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>com.github.eirslett</groupId>
            <artifactId>frontend-maven-plugin</artifactId>
            <version>1.12.0</version>
            <configuration>
              <workingDirectory>${project.basedir}/src/main/angular</workingDirectory>
              <installDirectory>target</installDirectory>
            </configuration>
            <executions>
              <execution>
                <id>install node and npm</id>
                <phase>prepare-package</phase>
                <goals>
                  <goal>install-node-and-npm</goal>
                </goals>
                <configuration>
                  <nodeVersion>v14.17.6</nodeVersion>
                  <npmVersion>6.14.15</npmVersion>
                </configuration>
              </execution>
              <execution>
                <id>npm install</id>
                <phase>prepare-package</phase>
                <goals>
                  <goal>npm</goal>
                </goals>
                <configuration>
                  <arguments>install</arguments>
                </configuration>
              </execution>
              <execution>
                <id>npm run build-prod</id>
                <phase>prepare-package</phase>
                <goals>
                  <goal>npm</goal>
                </goals>
                <configuration>
                  <arguments>run build-prod</arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
